Add support for extra_vars to the playbook action
Signed-off-by: Pascal Arlt <parlt@suse.com>